<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageview_Personaje"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/app_name"
         />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageview_Personaje"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/fondoet"
        android:ems="10"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txt_altura"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageview_Personaje"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/fondoet"
        android:ems="10"
        android:hint="@string/et_altura"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txt_peso"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageview_Personaje"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="147dp"
        android:background="@drawable/fondoet"
        android:ems="10"
        android:hint="@string/et_peso"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="209dp"
        android:layout_height="41dp"
        android:layout_below="@+id/txt_nombre"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"

        android:layout_centerHorizontal="true"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"


        android:layout_marginTop="113dp"
        android:background="@drawable/fondoboton"
        android:onClick="Jugar"
        android:text="@string/boton"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_BestScore"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/fondoet"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />
</RelativeLayout>